--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML5 com CSS 3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero similique culpa magni, unde vero id quas accusantium error nobis quasi. Magni, corporis aliquam. Repellendus ducimus ut minima in sed ex.</p>
             <article>
-                <h2>Artigo 002</h2>
-                <p>Texto artigo 002</p>
+                <h2>Curso de JavaScript</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laboriosam itaque, doloremque incidunt labore dolorum voluptate sed velit ipsa error fugit ipsam asperiores vero saepe neque autem corporis, suscipit recusandae?</p>
             </article>
         </article>
     </main>
