add a pasta de imagens

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS 3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero similique culpa magni, unde vero id quas accusantium error nobis quasi. Magni, corporis aliquam. Repellendus ducimus ut minima in sed ex.</p>
+            <p><abbr title="HyperText Markup Language">HTML</abbr>é uma linguagem de marcação para criação de sites. Atualmente na versão 5, ela usa uma semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Sytle Sheetes">CSS</abbr>, criamos as configurações visuais que um site vai ter. </p>
             <article>
                 <h2>Curso de JavaScript</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laboriosam itaque, doloremque incidunt labore dolorum voluptate sed velit ipsa error fugit ipsam asperiores vero saepe neque autem corporis, suscipit recusandae?</p>
+                <p><abbr title="JavaScript">JavaScript</abbr>É uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
             </article>
         </article>
     </main>
